---------------------------------------------------------------------------------------------------
Version: 0.1.12
Date: 18.08.25
  Changes:
    - Made settings folder with settings files.
  Features:
    - Setting for space age.
  Credit:
    - Thanks (lucerattow) @BlackkLotus es-ES Locals.
    - Thanks (lucerattow) @BlackkLotus for PR stack sizes for Base & .
    - Thanks (lucerattow) @BlackkLotus https://github.com/SGZ-Creations/Configurable-Landfill/pull/2
---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: 05.08.25
  Bugfixes:
    - Broken settings when using Gregtorio.
---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: 18.06.25
  Changes:
    - Improved Landfill from start function when using the setting.
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 09.06.25
  Locale:
    - Added Missing es-ES line in English.
    - Added Sorted files es-ES.
    - Added Sorted files NO.
  Bugfixes:
    - Changelog typos.
  Changes:
    - Attempted to failproof landfill.
    - Rewrote tool tip. Landfill from start settings.
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 16.04.25
  Features:
    - New Setting to change mining speed of [item=landfill]
  Changes:
    - Organized local files.
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 23.03.25
  Features:
    - Made Tile speed configurable. [item=stone-brick], [item=concrete], [item=refined-concrete],
    - Dectorio tile speed support.
    - Transport Drones tile speed support. 
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 05.02.2025
  Changes:
    - local DRI, DRR, DRT, SS, Mods
  Bugfixes: